--- a/BeaconScanner/app/src/main/res/layout/fragment_inicio_conductor.xml
+++ b/BeaconScanner/app/src/main/res/layout/fragment_inicio_conductor.xml
@@ -10,8 +10,10 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:foregroundGravity="bottom"
-        android:gravity="bottom"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/border"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,28 +22,34 @@
         <ImageView
             android:id="@+id/imageView5"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom"
-            android:layout_marginTop="65dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_margin="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_weight="3"
-            android:foregroundGravity="bottom"
-            android:padding="16dp"
+            android:adjustViewBounds="true"
+            android:foregroundGravity="center_vertical"
             android:src="@drawable/happ" />
 
         <LinearLayout
+            android:id="@+id/linearLayoutguay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:orientation="vertical"
-            android:padding="8dp">
+            android:paddingLeft="8dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp">
 
             <TextView
                 android:id="@+id/title2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp"
                 android:fontFamily="@font/nunito_semibold"
+                android:padding="0dp"
                 android:text="@string/cal"
                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                 android:textSize="20sp" />
@@ -50,27 +58,28 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="-20dp"
                 android:fontFamily="@font/nunito_semibold"
+                android:gravity="center_vertical"
                 android:text="@string/porciento"
+                android:textAlignment="viewStart"
                 android:textColor="@color/common_google_signin_btn_text_dark_default"
-                android:textSize="90sp" />
+                android:textSize="45sp" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp"
+                android:fontFamily="@font/nunito"
+                android:padding="0dp"
+                android:text="@string/veinticuatro"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/nunito"
-        android:text="@string/veinticuatro"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <com.google.android.material.card.MaterialCardView
 
@@ -90,7 +99,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -109,29 +118,29 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:fontFamily="@font/nunito_semibold"
-                    android:paddingStart="0dp"
-                    android:paddingLeft="0dp"
+                    android:padding="8dp"
+                    android:paddingStart="16dp"
                     android:paddingTop="8dp"
                     android:paddingEnd="0dp"
-                    android:paddingRight="0dp"
+                    android:paddingRight="8dp"
                     android:paddingBottom="8dp"
                     android:text="@string/estadonodo"
-                    android:textAlignment="textEnd"
+                    android:textAlignment="viewStart"
                     android:textColor="#000000"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/textView8"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:fontFamily="@font/nunito_semibold"
                     android:padding="8dp"
                     android:text="@string/activo"
                     android:textAlignment="textStart"
                     android:textColor="#000000"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -147,26 +156,27 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:fontFamily="@font/nunito_semibold"
-                    android:paddingLeft="0dp"
+                    android:padding="8dp"
+                    android:paddingStart="16dp"
                     android:paddingTop="8dp"
-                    android:paddingRight="0dp"
+                    android:paddingRight="8dp"
                     android:paddingBottom="8dp"
                     android:text="@string/dist"
-                    android:textAlignment="textEnd"
+                    android:textAlignment="viewStart"
                     android:textColor="#000000"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/textView9"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:fontFamily="@font/nunito_semibold"
                     android:padding="8dp"
                     android:text="28Km"
                     android:textColor="#000000"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
