fragment info implementado

--- a/BeaconScanner/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/BeaconScanner/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -17,6 +17,10 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_foto" />
         <item
+            android:id="@+id/nav_info"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="@string/menu_info" />
+        <item
             android:id="@+id/nav_ajustes"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/menu_ajustes" />
