--- a/BeaconScanner/app/src/main/res/navigation/mobile_navigation.xml
+++ b/BeaconScanner/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,6 +24,12 @@
         tools:layout="@layout/fragment_foto" />
 
     <fragment
+        android:id="@+id/nav_info"
+        android:name="com.example.beaconscanner.ui.info.InfoFragment"
+        android:label="@string/menu_info"
+        tools:layout="@layout/fragment_info" />
+
+    <fragment
         android:id="@+id/nav_ajustes"
         android:name="com.example.beaconscanner.ui.ajustes.AjustesFragment"
         android:label="@string/menu_ajustes"
