--- a/BeaconScanner/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/BeaconScanner/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -18,7 +18,7 @@
             android:title="@string/menu_foto" />
         <item
             android:id="@+id/nav_info"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/baseline_info_black_48"
             android:title="@string/menu_info" />
         <item
             android:id="@+id/nav_ajustes"
