--- a/BeaconScanner/app/src/main/res/menu/activity_navigation_drawer_drawerc.xml
+++ b/BeaconScanner/app/src/main/res/menu/activity_navigation_drawer_drawerc.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_inicio"
+            android:icon="@drawable/home"
+            android:title="@string/inicio" />
+        <item
             android:id="@+id/nav_home"
             android:icon="@drawable/brujula"
             android:title="@string/menu_home" />
