--- a/BeaconScanner/app/src/main/res/navigation/mobile_navigationc.xml
+++ b/BeaconScanner/app/src/main/res/navigation/mobile_navigationc.xml
@@ -3,7 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_inicio">
+
+    <fragment
+        android:id="@+id/nav_inicio"
+        android:name="com.example.beaconscanner.ui.inicio.InicioConductorFragment"
+        android:label="@string/inicio"
+        tools:layout="@layout/fragment_inicio_conductor" />
 
     <fragment
         android:id="@+id/nav_home"
