--- a/BeaconScanner/app/src/main/res/layout/activity_navigation_drawerc.xml
+++ b/BeaconScanner/app/src/main/res/layout/activity_navigation_drawerc.xml
@@ -9,12 +9,12 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/app_bar_navigation_drawer"
+        layout="@layout/app_bar_navigation_drawerc"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/nav_viewc"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
