nav drawer diferencia usuario terminado

--- a/BeaconScanner/app/src/main/res/layout/app_bar_navigation_drawerc.xml
+++ b/BeaconScanner/app/src/main/res/layout/app_bar_navigation_drawerc.xml
@@ -21,7 +21,7 @@
         app:elevation="0dp">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbarc"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="#0000F0DC"
