--- a/BeaconScanner/app/src/main/res/layout/activity_maps.xml
+++ b/BeaconScanner/app/src/main/res/layout/activity_maps.xml
@@ -9,5 +9,5 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.mapwithmarker.MapsMarkerActivity" />
+        tools:context="com.equipo3.mapwithmarker.MapsMarkerActivity" />
 </FrameLayout>
