--- a/BeaconScanner/app/src/main/res/navigation/mobile_navigation.xml
+++ b/BeaconScanner/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,37 +7,37 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.beaconscanner.ui.mapa.MapaFragment"
+        android:name="com.equipo3.poluzone.ui.mapa.MapaFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_mapa" />
 
     <fragment
         android:id="@+id/nav_foto"
-        android:name="com.example.beaconscanner.ui.foto.FotoFragment"
+        android:name="com.equipo3.poluzone.ui.foto.FotoFragment"
         android:label="@string/menu_foto"
         tools:layout="@layout/fragment_foto" />
 
     <fragment
         android:id="@+id/nav_info"
-        android:name="com.example.beaconscanner.ui.info.InfoFragment"
+        android:name="com.equipo3.poluzone.ui.info.InfoFragment"
         android:label="@string/menu_info"
         tools:layout="@layout/fragment_info" />
 
     <fragment
         android:id="@+id/nav_ajustes"
-        android:name="com.example.beaconscanner.ui.ajustes.AjustesFragment"
+        android:name="com.equipo3.poluzone.ui.ajustes.AjustesFragment"
         android:label="@string/menu_ajustes"
         tools:layout="@layout/fragment_ajustes" />
 
     <fragment
         android:id="@+id/nav_perfil"
-        android:name="com.example.beaconscanner.ui.perfil.PerfilFragment"
+        android:name="com.equipo3.poluzone.ui.perfil.PerfilFragment"
         android:label="@string/menu_perfil"
         tools:layout="@layout/fragment_perfil" />
 
     <fragment
         android:id="@+id/nav_sesion"
-        android:name="com.example.beaconscanner.ui.sesion.SesionFragment"
+        android:name="com.equipo3.poluzone.ui.sesion.SesionFragment"
         android:label="@string/menu_sesion"
         tools:layout="@layout/fragment_sesion" />
 
