--- a/BeaconScanner/app/src/main/res/layout/activity_maps.xml
+++ b/BeaconScanner/app/src/main/res/layout/activity_maps.xml
@@ -5,4 +5,4 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.beaconscanner.MapsActivity" />
+        tools:context="com.equipo3.poluzone.com.example.equipo3.MapsActivity" />
