--- a/BeaconScanner/app/src/main/res/layout/app_bar_navigation_drawerc.xml
+++ b/BeaconScanner/app/src/main/res/layout/app_bar_navigation_drawerc.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="0dp"
-    tools:context=".NavigationDrawerActivity">
+    tools:context="com.equipo3.poluzone.NavigationDrawerActivity">
 
     <include
         layout="@layout/content_navigation_drawerc"
