Funcionando el recycler view y transicion entre fragment y activity

--- a/BeaconScanner/app/src/main/res/layout/recyclerview_medidasitem.xml
+++ b/BeaconScanner/app/src/main/res/layout/recyclerview_medidasitem.xml
@@ -1,6 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:id="@+id/item_layout">
 
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/idmedida"
+        android:text="@string/hola"
+        android:layout_centerVertical="true"
+        ></TextView>
+
+    <TextView
+        android:id="@+id/fechamedida"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:layout_toEndOf="@id/idmedida"
+        android:text="@string/hola"></TextView>
+
+    <TextView
+        android:id="@+id/valormedida"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:layout_toEndOf="@id/fechamedida"
+        android:text="@string/hola"></TextView>
+
+    <TextView
+        android:id="@+id/tipomedida"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="39dp"
+        android:layout_toEndOf="@id/valormedida"
+        android:text="@string/hola"></TextView>
+
+
+</RelativeLayout>
