--- a/BeaconScanner/app/src/main/res/layout/fragment_recyclerview_listamedidas.xml
+++ b/BeaconScanner/app/src/main/res/layout/fragment_recyclerview_listamedidas.xml
@@ -1,21 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relativeLayout"
+    android:id="@+id/layoutrecycler"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorPrimary"
+    android:padding="24dp"
     tools:context=".MainMisMedidas">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/nunito"
+        android:textSize="24sp"
+        android:text="@string/mis_mediciones"
+        android:textColor="#FFFF"></TextView>
 
+</LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_medidas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:scrollbars="vertical"
         tools:listitem="@layout/recyclerview_medidasitem" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
