--- a/BeaconScanner/app/src/main/res/layout/fragment_inicio_conductor.xml
+++ b/BeaconScanner/app/src/main/res/layout/fragment_inicio_conductor.xml
@@ -153,7 +153,7 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/texviewactivonodo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
