--- a/BeaconScanner/app/src/main/res/layout/fragment_inicio_conductor.xml
+++ b/BeaconScanner/app/src/main/res/layout/fragment_inicio_conductor.xml
@@ -160,7 +160,7 @@
                     android:layout_weight="2"
                     android:fontFamily="@font/nunito_semibold"
                     android:padding="8dp"
-                    android:text="@string/activo"
+                    android:text="@string/inactivo"
                     android:textAlignment="textStart"
                     android:textColor="#000000"
                     android:textSize="18sp" />
