search bar sin boton de rutas

--- a/BeaconScanner/app/src/main/res/layout/app_bar_navigation_drawer.xml
+++ b/BeaconScanner/app/src/main/res/layout/app_bar_navigation_drawer.xml
@@ -22,7 +22,7 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="?attr/actionBarSize"
             android:background="#0000F0DC"
             android:elevation="6dp"
